--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,9 +6,10 @@
         xmlns:local="clr-namespace:EmptyWPFwithScroll"
         mc:Ignorable="d"
         Title="MainWindow" Height="1000" Width="800" Left="0" Top="0" Closing="Window_Closing">
+
     <DockPanel LastChildFill="False" HorizontalAlignment="Stretch" Height="NaN" Margin="0,0,0,0" VerticalAlignment="Stretch" Width="NaN">
-        <Menu x:Name="hauptMenu" Width="800" DockPanel.Dock="Top" Height="20">
-            <MenuItem Header="_Datei">
+        <Menu x:Name="mainMenu" Width="800" DockPanel.Dock="Top" Height="20">
+            <MenuItem Header="_File">
                 <MenuItem Header="_Quit" Click="MenuQuit_Click"/>
             </MenuItem>
         </Menu>
@@ -18,4 +19,6 @@
         </ScrollViewer>
 
     </DockPanel>
+    
 </Window>
+
